--- a/google-sheets-mimic/src/components/Spreadsheet.css
+++ b/google-sheets-mimic/src/components/Spreadsheet.css
@@ -183,4 +183,9 @@
     width: 80px;
     height: 35px;
   }
+  .grid-cell.selected {
+    border: 2px solid blue;
+    background-color: #e0f7ff;
+  }
+  
 }
